# Wgpu-Cellular-Automata

./: Cargo.toml  README.md  automata.rs  main.rs  obj.rs  triangle.rs
obj_loader/: data.rs  face_element.rs  mesh.rs  mesh_vertex.rs
shaders/: compute_automata.wgsl  mesh.wgsl  render_automata.wgsl  triangles.wgsl
src/: automata.rs  automata_dsl.rs  camera.rs  lib.rs  main.rs  polar.rs  render_state.rs  simple_automata_cpu.rs  simple_camera.rs  util.rs
