[package]
name = "wgpu-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
glam = "0.21.3"
bytemuck = { version = "1.12.1", features = ["derive"] } 
rand = "0.8.5"
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.27.3"
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.9"

[[bin]]
name = "wgpu-playground"
path = "main.rs"
